--- a/index.html
+++ b/index.html
@@ -194,6 +194,19 @@
           </div>
         </article>
 
+                <article class="product-card bg-white p-4 rounded-lg shadow dark:bg-dark-card dark:shadow-md" data-category="cpu" data-price="1990" data-name="AMD Ryzen 5 9600X">
+          <img src="https://scontent.fmji1-1.fna.fbcdn.net/v/t39.30808-6/572474331_788458787360086_5906297399774088541_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=aa7b47&_nc_eui2=AeGmGvab2ROIyMl39HQC0y1V8Fp4pRXVx3LwWnilFdXHcohPhpTv4uzaTAOnfoEhN3XDQTv3iXWBZz7DoQEYOxSb&_nc_ohc=2Fu3T2p5SUYQ7kNvwELLl1x&_nc_oc=AdlmyFLlXfcOEsYFOeQhxCa13RsB8NoEH73O8v5QTHDSoyHxtuUkF36xSzHS3-Mlkaw&_nc_zt=23&_nc_ht=scontent.fmji1-1.fna&_nc_gid=pFhaRw3uyyiFdrgB_OQ6AA&oh=00_AfeyUmLri3GtvJaSQ6BIiEkqNT55I0nYijyj_RzjRtU7_w&oe=6907F6AC" />
+          <h3 class="mt-3 font-semibold">AMDققبسيب</h3>
+          <div class="mt-1 text-slate-600 dark:text-white\/70">معالج AMD Ryzen 5 9600X بست أنوية و12 خيطًا بمعمارية Zen 5 وتردد 5.4 GHz، يقدم أداءً قويًا وكفاءة عالية للألعاب والاستخدام اليومي على مقبس AM5.</div>
+          <div class="mt-3 flex items-center justify-between">
+            <div class="text-lg font-bold">1990د.ل</div>
+            <div class="flex gap-2">
+              <button class="addToCartBtn px-3 py-1 rounded-md border text-sm dark:border-white\/30">أضف للسلة</button>
+              <button class="viewBtn px-3 py-1 rounded-md bg-slate-100 text-sm dark:bg-dark-card\/80">عرض</button>
+            </div>
+          </div>
+        </article>
+
         <article class="product-card bg-white p-4 rounded-lg shadow dark:bg-dark-card dark:shadow-md" data-category="ram" data-price="1900" data-name="ASUS TUF GAMING B850M-E WIFI">
           <img src="https://scontent.fmji1-1.fna.fbcdn.net/v/t39.30808-6/571143885_788467570692541_3534864087627365666_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=aa7b47&_nc_eui2=AeH1kGguh8y5Z-suYFOhmG4saxv_6TFo7wtrG__pMWjvC_fa6KiefzD903NNHu854DVllTR1HzKmYwycPxy07LGT&_nc_ohc=70ZUtpGPjukQ7kNvwGsG9xQ&_nc_oc=AdnC-dL8899JDdDfXdLu4zD9KU754KjWRChqFL4NOdcE-BXQJwbuBACWI-RSaBUKggY&_nc_zt=23&_nc_ht=scontent.fmji1-1.fna&_nc_gid=bOMHnk3D2UbeWi-bXxuYGw&oh=00_AfczAE30cTaRAKVk-tDINZDdEdMn4hmcdHar3mWJBfcL9w&oe=6907C6D9" />
           <h3 class="mt-3 font-semibold">ASUS TUF GAMING B850M-E WIFI</h3>
