--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
           </div>
         </article>
 
-                <article class="product-card bg-white p-4 rounded-lg shadow dark:bg-dark-card dark:shadow-md" data-category="cpu" data-price="1990" data-name="AMD Ryzen 5 9600X">
-          <img src="https://scontent.fmji1-1.fna.fbcdn.net/v/t39.30808-6/572474331_788458787360086_5906297399774088541_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=aa7b47&_nc_eui2=AeGmGvab2ROIyMl39HQC0y1V8Fp4pRXVx3LwWnilFdXHcohPhpTv4uzaTAOnfoEhN3XDQTv3iXWBZz7DoQEYOxSb&_nc_ohc=2Fu3T2p5SUYQ7kNvwELLl1x&_nc_oc=AdlmyFLlXfcOEsYFOeQhxCa13RsB8NoEH73O8v5QTHDSoyHxtuUkF36xSzHS3-Mlkaw&_nc_zt=23&_nc_ht=scontent.fmji1-1.fna&_nc_gid=pFhaRw3uyyiFdrgB_OQ6AA&oh=00_AfeyUmLri3GtvJaSQ6BIiEkqNT55I0nYijyj_RzjRtU7_w&oe=6907F6AC" />
-          <h3 class="mt-3 font-semibold">AMDققبسيب</h3>
-          <div class="mt-1 text-slate-600 dark:text-white\/70">معالج AMD Ryzen 5 9600X بست أنوية و12 خيطًا بمعمارية Zen 5 وتردد 5.4 GHz، يقدم أداءً قويًا وكفاءة عالية للألعاب والاستخدام اليومي على مقبس AM5.</div>
+                <article class="product-card bg-white p-4 rounded-lg shadow dark:bg-dark-card dark:shadow-md" data-category="cpu" data-price="45" data-name="World Map Mouse Pad">
+          <img src="https://static-01.daraz.pk/p/98db95b156d0199b0221cd6f4dd68a68.jpg" />
+          <h3 class="mt-3 font-semibold">World Map Mouse Pad</h3>
+          <div class="mt-1 text-slate-600 dark:text-white\/70">ماوس باد خريطة العالم ( World Map Mouse Pad ) حجم : 30*80</div>
           <div class="mt-3 flex items-center justify-between">
-            <div class="text-lg font-bold">1990د.ل</div>
+            <div class="text-lg font-bold">45د.ل</div>
             <div class="flex gap-2">
               <button class="addToCartBtn px-3 py-1 rounded-md border text-sm dark:border-white\/30">أضف للسلة</button>
               <button class="viewBtn px-3 py-1 rounded-md bg-slate-100 text-sm dark:bg-dark-card\/80">عرض</button>
