--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <meta property="og:title" content="اسم موقعك هنا">
+<meta property="og:description" content="وصف قصير عن موقعك">
+<meta property="og:image" content="images/preview.png">
+<meta property="og:url" content="https://example.com">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="اسم موقعك">
+<meta name="twitter:description" content="وصف الموقع">
+<meta name="twitter:image" content="images/preview.png">
   <link rel="icon" type="image/png" href="images/favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
