--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta property="og:title" content="اسم موقعك هنا">
-<meta property="og:description" content="وصف قصير عن موقعك">
-<meta property="og:image" content="https://scontent.fmji1-1.fna.fbcdn.net/v/t39.30808-6/581697460_122105210049086657_6210627286936703361_n.png?_nc_cat=108&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeFGTmKGVHYHpBeIeyZ3t_W-zO6uzy3YxojM7q7PLdjGiDes-sRVGafbl8nazsHLWwwhip4ZIt7FNJB7esYBd7V3&_nc_ohc=Hpj8WKqURlEQ7kNvwH5WShs&_nc_oc=AdkXdadQ8Pr6Mdpefv27VGO3u03DUBAznO9Meai3aqxHyINfHIYPxnzudsgUeZlXrlw&_nc_zt=23&_nc_ht=scontent.fmji1-1.fna&_nc_gid=hx_PxvxIUAyVrhv_DTvINQ&oh=00_AfhAIjh3yKCHfHtVnamtSdcG2GJBt_v6xvYBjw8zrS4bTg&oe=6927BCEA">
-<meta property="og:url" content="https://example.com">
+  <!-- Favicon -->
+<link rel="icon" type="image/png" href="https://web.whatsapp.com/96ab0259-d5ed-4e36-b649-2b63115c1cd3">
+
+<!-- Open Graph -->
+<meta property="og:title" content="switches-stor">
+<meta property="og:description" content="أفضل متجر لبيع قطع الكمبيوتر، الإكسسوارات، لوحات المفاتيح، الفأرات، والقطع الإضافية لتجميع جهازك المثالي.">
+<meta property="og:image" content="https://web.whatsapp.com/96ab0259-d5ed-4e36-b649-2b63115c1cd3">
+<meta property="og:url" content="https://switches-stor.netlify.app">
 <meta property="og:type" content="website">
+
+<!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="اسم موقعك">
-<meta name="twitter:description" content="وصف الموقع">
-<meta name="twitter:image" content="images/preview.png">  
+<meta name="twitter:title" content="switches-stor">
+<meta name="twitter:description" content="أفضل متجر لبيع قطع الكمبيوتر، الإكسسوارات، لوحات المفاتيح، الفأرات، والقطع الإضافية لتجميع جهازك المثالي.">
+<meta name="twitter:image" content="https://web.whatsapp.com/96ab0259-d5ed-4e36-b649-2b63115c1cd3">
+
   <link rel="icon" type="image/png" href="images/favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
