--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <meta name="google-site-verification" content="googleafe1938461f4423d.html">
   <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://web.whatsapp.com/96ab0259-d5ed-4e36-b649-2b63115c1cd3">
 
