--- a/index.html
+++ b/index.html
@@ -720,6 +720,8 @@
       <option>مزودات الطاقة</option>
       <option>الصناديق</option>
       <option>شاشات</option>
+      <option>إكسسوارات</option>
+
     </select>
     <!-- FIXED: Brand names in English -->
     <select id="brandFilter">
@@ -1093,6 +1095,20 @@ const products = [
     spec2: "QHD 2560x1440",
     spec3: "170 هرتز",
     spec4: "0.5ms"
+  }},
+
+    {id:22, name:"LDON Mide 68", category:"إكسسوارات", price:299, oldPrice:399, condition:"جديد", rating:4.9, 
+  images:[
+    'https://sc04.alicdn.com/kf/Hacb935a777eb4a7b8f1217f2645b7a26j.jpg',
+    'https://ae01.alicdn.com/kf/S1d39d71de2de42809a1433ec5b8b8398W.jpg',
+    'https://m.media-amazon.com/images/I/71hl1rmRU9L._AC_UF350,350_QL80_.jpg'
+  ],  
+  desc:"كيبورد مغناطيسي مميز للألعاب مع إضاءة RGB قابلة للتخصيص.",
+  specs: {
+    spec1: "Magnetic Switch 8K",
+    spec2: "0.125ms",
+    spec3: "Sky Blue PRO Switches",
+    spec4: "68% حجم"
   }},
 ];
 
