--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,9 @@ const unavailableProducts = [
   "ASUS ROG Strix Z790-E",
   "ASUS ROG Strix 1000W 80+ Platinum",
   "ASUS TUF B850M-E WIFI",
-  "Crucial t705 2TB NVMe Gen5 SSD"
+  "Crucial t705 2TB NVMe Gen5 SSD",
+  "Gigabyte M27Q EK",
+  "Lenovo Legion R271"
 ];
 
 // Sample Products - Product names and brand names in English
