--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Open Graph Meta Tags for Social Media Sharing -->
   <meta property="og:title" content="Switches - سويتشز">
   <meta property="og:description" content="متجر سويتشز هو متجر إلكتروني لبيع قطع الكمبيوتر، الإلكترونيات، والإكسسوارات.">
-  <meta property="og:image" content="https://i.imgur.com/VSRAicN.jpeg">
+  <meta property="og:image" content="https://imgur.com/undefined">
   <meta property="og:url" content="https://www.switches-store.ly/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Switches - سويتشز">
@@ -50,7 +50,7 @@
       --logo-font: 'Segoe UI', sans-serif;
       --logo-weight: bold;
       --logo-style: normal;
-      --background-image: url('https://img.freepik.com/premium-photo/top-view-computer-parts_160097-856.jpg');
+      --background-image: url('https://m.media-amazon.com/images/I/71PfpmveSqL._AC_SL1500_.jpg');
       --background-opacity: 0.15;
       --background-blur: 0px;
       --background-scale: 1;
@@ -973,7 +973,7 @@
 <header>
   <div class="logo-container">
     <img src="https://qwertyqop.com/cdn/shop/files/individualswitch.png?v=1698726047" alt="شعار سويتشز" class="logo-image">
-    <div class="logo">سويتشز</div>
+    <div class="logo">سويتشز-Switches</div>
   </div>
   <div style="display:flex; align-items:center; gap:2rem;">
     <div class="cart-icon" id="cartIcon">
