--- a/index.html
+++ b/index.html
@@ -1968,7 +1968,7 @@ const discountedProductNames = [
 
 // 3. قائمة المنتجات التي ستتوفر قريباً (حددها يدوياً)
 const comingSoonProductNames = [
-  "Lovingcool DP-360mm"
+  "Lovingcool DP-360mm",
   "AJAZZ NACODEX NK68",
   "PlayStation 5 Slim",
   "Mouse Pad Ghost Operator",
@@ -2028,7 +2028,7 @@ const products = [
   images:[
     'https://s.alicdn.com/@sc04/kf/Hb08a54fc6e5144c98029e12424729404b.jpg?avif=close&webp=close.jpg',
   ],
-desc:"مبرد Lovingcool 360mm ARGB بتبريد مائي قوي للمعالج مع شاشة عرض فيديو 4.0 بوصة قابلة للتخصيص، يوفر أداء تبريد عالي حتى 300W مع تشغيل هادئ وتصميم أنيق بإضاءة ARGB."
+desc:"مبرد Lovingcool 360mm ARGB بتبريد مائي قوي للمعالج مع شاشة عرض فيديو 4.0 بوصة قابلة للتخصيص، يوفر أداء تبريد عالي حتى 300W مع تشغيل هادئ وتصميم أنيق بإضاءة ARGB.",
   specs: {
     spec1: "تبريد مائي احترافي",
     spec2: "شاشة عرض ذكية",
