--- a/index.html
+++ b/index.html
@@ -2016,7 +2016,7 @@ const products = [
     'https://down-my.img.susercontent.com/file/my-11134208-7r98z-lxqjtn3aqu0gcf',
     'https://m.media-amazon.com/images/I/71KvpD-WuNL._UF1000,1000_QL80_.jpg'
   ],
-desc: "طقم ذاكرة 16GB DDR5 بسرعة 6000MHz يوفر أداءً عاليًا واستجابة سريعة، ومع لوحة Gigabyte B650M Gaming Plus WiFi تحصل على منصة قوية ومستقرة تدعم أحدث معالجات Ryzen مع اتصال Wi-Fi مدمج للألعاب والعمل."
+  desc:"طقم ذاكرة 16GB DDR5 بسرعة 6000MHz يوفر أداءً عاليًا واستجابة سريعة، ومع لوحة Gigabyte B650M Gaming Plus WiFi تحصل على منصة قوية ومستقرة تدعم أحدث معالجات Ryzen مع اتصال Wi-Fi مدمج للألعاب والعمل.",
   specs: {
     spec1: "تردد عالي 6000MHz",
     spec2: "أتصال Wi-Fi مدمج",
