--- a/index.html
+++ b/index.html
@@ -2314,8 +2314,8 @@
           "الإضاءة": "RGB متعددة التأثيرات",
           "الجودة": "بناء عالي الجودة"
         },
-        tags: ["discounted", "new"],
-        availability: "comingSoon"
+        tags: ["bestSelling", "new"],
+        availability: "available"
       },
       {
         id: 27,
@@ -2424,7 +2424,7 @@
           "الإضاءة": "White LED",
           "التوافق": "جميع الأنظمة"
         },
-        tags: ["bestSelling", "discounted"],
+        tags: ["discounted", "discounted"],
         availability: "unavailable"
       },
       {
@@ -2468,7 +2468,7 @@
           "معدل التحديث": "170 هرتز",
           "زمن الاستجابة": "0.5ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2490,7 +2490,7 @@
           "معدل التحديث": "180 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2512,7 +2512,7 @@
           "معدل التحديث": "250 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2534,7 +2534,7 @@
           "معدل التحديث": "180-200 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "available"
       },
       {
@@ -2556,7 +2556,7 @@
           "معدل التحديث": "160 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2578,7 +2578,7 @@
           "معدل التحديث": "144 هرتز",
           "زمن الاستجابة": "4ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2600,7 +2600,7 @@
           "معدل التحديث": "180 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2622,7 +2622,7 @@
           "معدل التحديث": "60 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
@@ -2644,7 +2644,7 @@
           "معدل التحديث": "165 هرتز",
           "زمن الاستجابة": "1ms"
         },
-        tags: ["bestSelling"],
+        tags: ["discounted"],
         availability: "unavailable"
       },
       {
