--- a/index.html
+++ b/index.html
@@ -2630,7 +2630,7 @@
         category: "بلايستيشن",
         brand: "PlayStation",
         price: 3699,
-        oldPrice: 3899s,
+        oldPrice: 3899,
         condition: "مستعمل",
         images: [
           'https://static.independent.co.uk/2025/09/30/11/06/ps5-slim-deal.png'
