--- a/index.html
+++ b/index.html
@@ -2429,7 +2429,7 @@
         name: "ASUS TUF RX 5700 XT GAMING OC 8GB GDDR6",
         category: "قطع التجميعة",
         brand: "ASUS",
-        price: 1650,
+        price: 1580,
         oldPrice: 1850,
         condition: "مستعمل",
         images: [
@@ -2449,20 +2449,19 @@
 
       {
         id: 35,
-        name: "Combo Gigabyte B650M GAMING PLUS WIFI with TEAMGROUP T-Force DELTA White 16GB DDR5 6000MHz",
+        name: "Combo Gigabyte B650M GAMING PLUS WIFI",
         category: "قطع التجميعة",
         brand: "Combo",
-        price: 2600,
+        price: 1250,
         oldPrice: null,
         condition: "جديد",
         images: [
           'https://cdn.mos.cms.futurecdn.net/v2/t:0,l:0,cw:1479,ch:832,q:80,w:1479/J7pdHamQPPcRm5TzwJp5Ze.jpg',
-          'https://down-my.img.susercontent.com/file/my-11134208-7r98z-lxqjtn3aqu0gcf',
-          'https://m.media-amazon.com/images/I/71KvpD-WuNL._UF1000,1000_QL80_.jpg'
-        ],
-        description: "طقم ذاكرة 16GB DDR5 بسرعة 6000MHz يوفر أداءً عاليًا واستجابة سريعة، ومع لوحة Gigabyte B650M Gaming Plus WiFi تحصل على منصة قوية ومستقرة تدعم أحدث معالجات Ryzen مع اتصال Wi-Fi مدمج للألعاب والعمل.",
+          'https://down-my.img.susercontent.com/file/my-11134208-7r98z-lxqjtn3aqu0gcf'
+      ],
+        description: "لوحة Gigabyte B650M GAMING PLUS WIFI تقدّم أداءً قويًا لمعالجات AMD Ryzen مع دعم Wi-Fi مدمج وتصميم مخصص للألعاب بحجم mATX.",
         specs: {
-          "الذاكرة": "16GB DDR5 6000MHz",
+          "الذاكرة": "4 x DDR5 DIMM",
           "اللوحة الأم": "Gigabyte B650M Gaming Plus WiFi",
           "التوافق": "AMD Ryzen 7000",
           "الميزات": "Wi-Fi مدمج + دعم رامات حتى 128GB"
@@ -2475,7 +2474,7 @@
         name: "Lovingcool DP-360mm",
         category: "قطع التجميعة",
         brand: "Lovingcool",
-        price: 990,
+        price: 930,
         oldPrice: 1200,
         condition: "جديد",
         images: [
@@ -2597,7 +2596,7 @@
           "الميزات": "Ray Tracing + 3D Audio"
         },
         tags: ["bestSelling"],
-        availability: "available"
+        availability: "unavailable"
       },
       {
         id: 28,
