--- a/index.html
+++ b/index.html
@@ -2449,7 +2449,7 @@
 
       {
         id: 35,
-        name: "Combo Gigabyte B650M GAMING PLUS WIFI",
+        name: "Gigabyte B650M GAMING PLUS WIFI",
         category: "قطع التجميعة",
         brand: "Combo",
         price: 1250,
@@ -3190,7 +3190,7 @@
     // ===== المنتجات المخصصة للأقسام =====
     const customBestSellingProducts = [
       "AJAZZ NACODEX NK68",
-      "Combo Gigabyte B650M GAMING PLUS WIFI with TEAMGROUP T-Force DELTA White 16GB DDR5 6000MHz",
+      "Gigabyte B650M GAMING PLUS WIFI",
       "Projector HY 300 Mini",
       "LDON Mide 68 8000Hz Magnetic Switch"
     ];
