--- a/index.html
+++ b/index.html
@@ -2249,7 +2249,7 @@
       <div class="cart-summary">
         <div class="cart-total">
           <span>المجموع:</span>
-          <span class="total-amount" id="cartTotal">0 د.ل</span>
+          <span class="total-amount" id="cartTotal">0 دولار</span>
         </div>
         <div class="cart-buttons">
           <button class="btn-modal btn-secondary" id="continueShoppingBtn">
@@ -2429,8 +2429,8 @@
         name: "ASUS TUF RX 5700 XT GAMING OC 8GB GDDR6",
         category: "قطع التجميعة",
         brand: "ASUS",
-        price: 1580,
-        oldPrice: 1850,
+        price: 160,
+        oldPrice: 185,
         condition: "مستعمل",
         images: [
           'https://dlcdnimgs.asus.com/websites/global/products/utcn39mqdlxmh2r1/img/kv/product-kv_s.jpg',
@@ -2452,7 +2452,7 @@
         name: "Gigabyte B650M GAMING PLUS WIFI",
         category: "قطع التجميعة",
         brand: "Combo",
-        price: 1250,
+        price: 150,
         oldPrice: null,
         condition: "جديد",
         images: [
@@ -2474,8 +2474,8 @@
         name: "Lovingcool DP-360mm",
         category: "قطع التجميعة",
         brand: "Lovingcool",
-        price: 930,
-        oldPrice: 1200,
+        price: 110,
+        oldPrice: 150,
         condition: "جديد",
         images: [
           'https://sc04.alicdn.com/kf/H545f8caf6ca741e9a9cda4002a7759e45.jpg',
