--- a/index.html
+++ b/index.html
@@ -2329,6 +2329,28 @@
     // ===== جميع المنتجات الأصلية =====
     const allProducts = [
 
+          {
+        id: 42,
+        name: "PlayStation 5 Digital Edition",
+        category: "بلايستيشن",
+        brand: "PlayStation",
+        price: 360,
+        oldPrice: 400,
+        condition: "مستعمل",
+        images: [
+          'https://i5.walmartimages.com/seo/Sony-PlayStation-5-Digital-Edition-Video-Game-Consoles_f62842fd-263f-46d4-8954-9fbe1a25d636.fefa1d11a99643573cf756f2ce835c05.png'
+        ],
+        description: "جهاز PlayStation 5 Digital Edition  جهاز ألعاب اقتصادي مناسب لمن يفضل النسخ الرقمية، يجمع بين السعر المناسب والأداء القوي وسرعة التحميل الفائقة لتجربة جيل جديد بدون أقراص.",
+        specs: {
+          "المعالج":" 8 أنوية Zen 2 ",
+          "الرام": "16GB GDDR6",
+          "التخزين": "SSD فائق السرعة",
+          "التحكم": "DualSense Controller"
+        },
+        tags: ["new"],
+        availability: "available"
+      },
+
       {
         id: 41,
         name: "Razer Hanbo Chroma RGB AIO Liquid Cooler - 240mm",
@@ -2648,7 +2670,7 @@
         name: "PlayStation 5 Slim",
         category: "بلايستيشن",
         brand: "PlayStation",
-        price: 400,
+        price: 380,
         oldPrice: 450,
         condition: "مستعمل",
         images: [
@@ -3218,7 +3240,7 @@
       "Lovingcool DP-360mm",
       "PlayStation 5 Slim",
       "Razer Hanbo Chroma RGB AIO Liquid Cooler - 240mm",
-      "ASUS TUF RX 5700 XT GAMING OC 8GB GDDR6"
+      "PlayStation 5 Digital Edition"
      ];
     
     const customComingSoonProducts = [
